--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "lucide-react": "^0.436.0",
     "next": "14.2.7",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
+    "react-joyride": "^2.8.2",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.21.0",
