--- a/package.json
+++ b/package.json
@@ -14,29 +14,33 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@rainbow-me/rainbowkit": "^2.1.5",
-    "@tanstack/react-query": "^5.53.1",
+    "@tanstack/react-query": "^5.54.1",
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.3.31",
-    "lucide-react": "^0.436.0",
+    "encoding": "^0.1.13",
+    "framer-motion": "^11.5.2",
+    "lucide-react": "^0.438.0",
+    "mongodb": "^6.8.0",
     "next": "14.2.7",
-    "react": "^18",
+    "pino-pretty": "^11.2.2",
+    "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-joyride": "^2.8.2",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "viem": "^2.21.0",
+    "viem": "^2.21.1",
     "wagmi": "^2.12.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@types/mongodb": "^4.0.7",
+    "@types/node": "^22.5.3",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^9.9.1",
     "eslint-config-next": "14.2.7",
-    "postcss": "^8",
+    "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10",
     "typescript": "^5"
   }
