--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@rainbow-me/rainbowkit": "^2.1.5",
     "@tanstack/react-query": "^5.53.1",
     "@tanstack/react-table": "^8.20.5",
+    "antd": "^5.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.31",
