--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "antd": "^5.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "copy-to-clipboard": "^3.3.3",
     "framer-motion": "^11.3.31",
     "lucide-react": "^0.436.0",
     "next": "14.2.7",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-joyride": "^2.8.2",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
