--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "copy-to-clipboard": "^3.3.3",
+    "ethers": "^6.13.2",
     "framer-motion": "^11.3.31",
     "lucide-react": "^0.436.0",
+    "mongodb": "^6.8.0",
     "next": "14.2.7",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
