--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "wagmi": "^2.12.8"
   },
   "devDependencies": {
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
