--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.21.0",
-    "wagmi": "^2.12.8"
+    "wagmi": "^2.12.8",
+    "ssv-keys": "^1.2.0"
   },
   "devDependencies": {
     "@types/mongodb": "^4.0.7",
